--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,13 @@
   width: 100%;
   height: 25rem;
   display: flex;
-  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
   color: white;
-  font-family: open sans;
+  font-family: "Roboto";
   display: flex;
-  justify-content: center;
+  font-size: 5rem;
 }
